--- a/front/public/css/user/profile.css
+++ b/front/public/css/user/profile.css
@@ -13,7 +13,8 @@
 #profileWrap {
     padding-bottom: 10rem;
     width: 100%;
-    background: linear-gradient(180deg, rgba(129, 211, 114, 0.1) 100%, rgb(110, 90, 60) 100%), url(../../img/profileback.jpg) 10% no-repeat;
+    background: linear-gradient(180deg, rgba(129, 211, 114, 0.1) 100%, rgb(110, 90, 60) 100%),
+        url(../../img/profileback.jpg) 10% no-repeat;
     background-size: cover;
 }
 
@@ -21,7 +22,8 @@
     margin: 0 auto;
     width: 120rem;
     height: 100rem;
-    background: linear-gradient(180deg, rgba(129, 211, 114, 0.1) 100%, rgb(110, 90, 60) 100%), url(../../img/note.jpg) 10% no-repeat;
+    background: linear-gradient(180deg, rgba(129, 211, 114, 0.1) 100%, rgb(110, 90, 60) 100%),
+        url(../../img/note.jpg) 10% no-repeat;
     background-size: cover;
     box-shadow: 1rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
 }
@@ -230,7 +232,6 @@
     box-sizing: border-box;
 }
 
-
 .profileContent > div {
     margin: 0 1rem;
 }
@@ -274,4 +275,8 @@
 .profileBtnWrap > ul > li:hover {
     color: #ececec;
     background-color: var(--footer);
+}
+
+.off {
+    display: none;
 }
