--- a/front/views/user/profile.html
+++ b/front/views/user/profile.html
@@ -28,24 +28,27 @@
                                 </form>
                             </div>
                         </div>
+
                         <div class="profileInfoRight">
                             <div class="profileImgWrap2 profileBox">
                                 <div class="profileAccount">
                                     <div class="profileAccountSubject">계정 정보</div>
-                                    <a href="#"><div class="profileAccountUpdate">수정하기</div></a>
+                                    <a href="/user/profileEdit"
+                                        ><div class="profileAccountUpdate">수정하기</div></a
+                                    >
                                 </div>
                                 <div class="profileAccountInfo">
                                     <div class="profileAccountInfoContent">
                                         <div>이 &nbsp&nbsp&nbsp 름</div>
-                                        <div>{{username}}</div>
+                                        <div>{{result[0].username}}</div>
                                     </div>
                                     <div class="profileAccountInfoContent">
                                         <div>아&nbsp이&nbsp디</div>
-                                        <div>{{userid}}</div>
+                                        <div>{{result[0].userid}}</div>
                                     </div>
                                     <div class="profileAccountInfoContent">
                                         <div>이&nbsp메&nbsp일</div>
-                                        <div>{{useremail}}</div>
+                                        <div>{{result[0].useremail}}</div>
                                     </div>
                                 </div>
                             </div>
@@ -56,51 +59,59 @@
                         <div class="profileSubject">내가 작성한 댓글</div>
                         <div class="profileSubject">내가 좋아요한 글</div>
                     </div>
+                    <!-- 제목 클릭-->
                     <div class="profileContents">
+                        <input type="hidden" value="{{resultLength}}" class="resultLengthHidden" />
+                        {% for item in result %}
                         <div class="profileContentWrap">
                             <div class="profileContent">
-                                <div>제목입니당ㅇㅇㅇㅇㅇ</div>
-                                <div>(7)</div>
+                                <div>{{item.subject}}</div>
+                                <div>({{item.hit}})</div>
                             </div>
                             <div class="profileRegister">2023-01-30</div>
                         </div>
-                        <div class="profileContentWrap">
-                            <div class="profileContent">
-                                <div>제목입니당ㅇㅇㅇㅇㅇ</div>
-                                <div>(7)</div>
-                            </div>
-                            <div class="profileRegister">2023-01-30</div>
-                        </div>
-                        <div class="profileContentWrap">
-                            <div class="profileContent">
-                                <div>제목입니당ㅇㅇㅇㅇㅇ</div>
-                                <div>(7)</div>
-                            </div>
-                            <div class="profileRegister">2023-01-30</div>
-                        </div>
-                        <div class="profileContentWrap">
-                            <div class="profileContent">
-                                <div>제목입니당ㅇㅇㅇㅇㅇ</div>
-                                <div>(7)</div>
-                            </div>
-                            <div class="profileRegister">2023-01-30</div>
-                        </div>
-                        <div class="profileContentWrap">
-                            <div class="profileContent">
-                                <div>제목입니당ㅇㅇㅇㅇㅇ</div>
-                                <div>(7)</div>
-                            </div>
-                            <div class="profileRegister">2023-01-30</div>
-                        </div>
+                        {% endfor %}
                     </div>
+                    <!-- 댓글 클릭-->
+                    <div class="profileContents off">
+                        {% for item1 in result %}
+                        <div class="profileContentWrap">
+                            <div class="profileContent">
+                                <div>{{item1.comment}}</div>
+                                <div>({{item1.username}})</div>
+                            </div>
+                            <div class="profileRegister">2023-01-30</div>
+                        </div>
+                        {% endfor %}
+                    </div>
+                    <!--좋아요한 댓글-->
+                    <div class="profileContents off">
+                        {% for item2 in result %}
+                        <div class="profileContentWrap">
+                            <div class="profileContent">
+                                <div>{{item2.useremail}}</div>
+                                <div>({{item2.hit}})</div>
+                            </div>
+                            <div class="profileRegister">2023-01-30</div>
+                        </div>
+                        {% endfor %}
+                    </div>
+
                     <div class="profileBtnWrap">
                         <ul>
                             <li class="prev">이전</li>
+                            <!-- {% set totalDate = resultLength %} {% set dataSize = 5 %} {% set
+                            limitNumber = 5 %} {% set currentNumber = 3%} {% for list in result %}
+                            <button>{{list}}</button>
+                            {% endfor %} -->
+
+                            <!-- <div>{{totalPage}}</div> -->
                             <li clsss="next">다음</li>
                         </ul>
                     </div>
                 </section>
             </div>
+            <script src="/js/user/profile.js" type="text/javascript"></script>
             {% include "layout/footer.html" %}
         </div>
     </body>
